--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,5 +1,5 @@
-- title: "External Menu Item"
-  url: "https://example.com"
+- title: "Buttons"
+  url: "/components/buttons"
   tab: true # opens this link in a new tab
   id: example # will be used as a parent item
 
