--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -7,6 +7,7 @@
   parent: themes # will make this item a child of the item above (not displayed when menu_style is set to 'dropdown')
 
 - title: "Components"
+  url: "components/dummypage"
   id: components # will be used as a parent item
 
 - title: "Buttons"
